# my-tensorflow-op

./: BUILD  CMakeLists.txt  com.sh  ten_add (kopia).cc  ten_add.cc
